Inicio da documentação de API
